     stop. So another mode is added for stanfit object.  
   * add function stan_demo() to run examples included in Stan. 
   * add function sflist2stanfit() to merge a list of stanfit objects into one,
     to facilitate some kind of user-level parallelism. 
   * add S3 method as.matrix, as.array, is.array, dim, dimnames for stanfit objects. 
    
2. Bug fixes 
   * bug of setting parameter epsilon_pm for NUTS 
   * 

Tue Sep 25 2012
1. Changes 
   * print progress of sampling with carriage return 

2. New features 
   * add set_cppo to set c++ compiler optimization level flag 
   * support test_grad in rstan; 
     two modes --- sampling and test_grad --- for stanfit

Mon Sep  3 2012
1. Changes 
   * parameter n_chains changed to chains 
   * derive model_name from model_code or file if model_name is not specified 

Wed Aug 2012
1. Changes
   * replace dots with underscores especially in function names

Sun Aug 26 2012
1. New features 
   * get more information about the sampler such as treedepth, 
     the log-posterior back to R. 

2. Changes 
   * use underscore '_' in some output and parameter names 
   * use lower case in print of stanfit for 'Mean', etc. 

Sat Aug 25 2012
1. Bug fixes
   * deal with the case that Rcpp and rstan is 
   * installed to a path with space, which causes
   * the library linked to cannot be found. 

Fri Aug 24 2012
1. Changes 
   use boost 1.51.0 

Tue Aug 21 2012
1. Bug fixes
   * not working binary build for Mac (not fixed last time)
   * bug fixes in Stan

2. New features 
   * add makeconf.path function to obtain the full path for file Makeconf 
   * add Rhat legend for stanfit's plot 
   * support saving stanfit object for reusing across R sessions  
   * using <lower=, upper=> syntax for bounded variables 


Sat Aug 11 2012:
1. Bug fixes
   * plot for stanfit wide y-axis 
   * print for stanfit class 
   * not working binary build for Mac, this is because variables for 